# nanoclaw

./: .env.example  .gitignore  CLAUDE.md  README.md  bun.lockb  package.json  tsconfig.json
.github/workflows/: version-bump.yml
container/: .dockerignore  Dockerfile  build.sh  entrypoint.sh
container/agent-runner/: bun.lockb  package.json
container/sandbox/: Dockerfile  build.sh  rotate-vnc-pw.sh  start.sh
docs/: ADAPTERS.md  DASHBOARD.md  SECURITY.md  SPEC.md  TOOLS.md
groups/global/: CLAUDE.md  (+1 more)
launchd/: com.nanoclaw.plist
scripts/: check-supermemory.ts  deploy-launchd.sh  deploy-systemd.sh  ensure-docker-requirements.sh  generate-cua-client.ts  self-update.sh  setup-envs.ts
src/: api-proxy.ts  browse-host.test.ts  browse-host.ts  capability-gateway.test.ts  capability-gateway.ts  commands.ts  concurrency.ts  config.test.ts  config.ts  container-runner.ts  cua-activity.ts  cua-client.ts  cua-follow-summary.ts  cua-takeover-server.ts  cua-trajectory.ts  dashboard-auth.ts  dashboard-server.ts  db.test.ts  db.ts  debug-log.ts  debug-ui.test.ts  debug-ui.ts  format.ts  host-rpc-router.test.ts  host-rpc-router.ts  index.ts  log-sync.ts  logger.ts  media-ai-config.test.ts  media.ts  memory.ts  mount-security.test.ts  mount-security.ts  novnc-proxy.ts  omniparser.ts  onepassword.ts  provider-config.test.ts  replicate-client.ts  rpc-protocol.test.ts  rpc-protocol.ts  (+23 more)
systemd/: com.nanoclaw.service
tts-server/: README.md  deploy.sh  pyproject.toml  requirements.txt  server.py
voice-sidecar/: Dockerfile  audio.py  build.sh  requirements.txt  server.py  vad.py
(+92 files in other folders)
