[project]
name = "nanoclaw-tts"
version = "0.1.0"
description = "Self-hosted Qwen3-TTS inference server"
requires-python = "==3.11.*"
dependencies = [
    "torch",
    "qwen-tts",
    "soundfile",
    "numpy",
    "numba>=0.59",
    "llvmlite>=0.43",
    "fastapi",
    "uvicorn[standard]",
]

[tool.uv]
python-preference = "only-managed"
